# maa-web

./: .gitignore  README.md
agent/: README.md  agent.py  config.example.yaml  mock_maa.sh  pyproject.toml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  device.py  task.py  user.py
backend/app/routes/: admin.py  maa.py
backend/app/schemas/: __init__.py  admin.py  maa.py
backend/app/services/: __init__.py  device.py  task.py
backend/scripts/: seed_demo_task.py  smoke_maa_flow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
